Improvements to decision tree

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -72,20 +72,31 @@
    "outputs": [],
    "source": [
     "# Run preprocessing code\n",
-    "def preprocess():\n",
+    "\"\"\"def preprocess():\n",
     "    f = open('dataset/reddit_wsb.csv', \"r\")\n",
     "    emoji_mat = extract_emojis(f)\n",
     "    for emoji_val in mat.keys():\n",
     "        print(emoji_val, np.sum(mat[emoji_val]))\n",
-    "    return emoji_mat"
+    "    return emoji_mat\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "id": "d3b667e4-64ef-40c5-9850-1d679cda0d8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[preprocess::extract emojis]\n",
+      "[preprocess::extract titles and body]\n",
+      "[preprocess::complete]\n"
+     ]
+    }
+   ],
    "source": [
     "# Run preprocessing code\n",
     "def preprocess(f_in):\n",
@@ -102,7 +113,7 @@
     "    print(\"[preprocess::complete]\")\n",
     "    return my_dict_emoji, my_dict_titles, my_dict_body\n",
     "    \n",
-    "#dict_emojis, dict_titles, dict_body = preprocess('dataset/reddit_wsb.csv')"
+    "dict_emojis, dict_titles, dict_body = preprocess('dataset/reddit_wsb.csv')"
    ]
   },
   {
@@ -180,9 +191,9 @@
     }
    ],
    "source": [
-    "data, ticker_set = get_ticker_data('dataset/reddit_wsb.csv','dataset/ticker_location.csv')\n",
-    "data.to_excel(\"tickerdata.xlsx\")\n",
-    "print(ticker_set)"
+    "#data, ticker_set = get_ticker_data('dataset/reddit_wsb.csv','dataset/ticker_location.csv')\n",
+    "#data.to_excel(\"tickerdata.xlsx\")\n",
+    "#print(ticker_set)"
    ]
   },
   {
@@ -227,8 +238,8 @@
     }
    ],
    "source": [
-    "print(data['GME']['Open'] - data['GME']['Close'])\n",
-    "print(data['GME'])\n",
+    "#print(data['GME']['Open'] - data['GME']['Close'])\n",
+    "#print(data['GME'])\n",
     "#for line in data['GME','Open']:\n",
     "#    print(line)\n",
     "    \n",
@@ -313,7 +324,7 @@
     }
    ],
    "source": [
-    "append_ticker_data(data, ticker_set)"
+    "#append_ticker_data(data, ticker_set)"
    ]
   },
   {
