--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "07dd3e30-9222-4d23-8288-47a5b0d5d64b",
    "metadata": {},
    "outputs": [],
@@ -13,78 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7901c0cc-232e-4849-9688-e2db9cccfabf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Unnamed: 0                                              title  score  \\\n",
-      "0               0  It's not about the money, it's about sending a...     55   \n",
-      "1               1  Math Professor Scott Steiner says the numbers ...    110   \n",
-      "2               2                                    Exit the system      0   \n",
-      "3               3  NEW SEC FILING FOR GME! CAN SOMEONE LESS RETAR...     29   \n",
-      "4               4  Not to distract from GME, just thought our AMC...     71   \n",
-      "...           ...                                                ...    ...   \n",
-      "53182       53182    What I Learned Investigating SAVA FUD Spreaders    238   \n",
-      "53183       53183  Daily Popular Tickers Thread for August 02, 20...    228   \n",
-      "53184       53184       Hitler reacts to the market being irrational   7398   \n",
-      "53185       53185        Daily Discussion Thread for August 02, 2021    338   \n",
-      "53186       53186  Fraternal Association of Gambling Gentlemen an...     40   \n",
-      "\n",
-      "           id                                                url  comms_num  \\\n",
-      "0      l6ulcx                    https://v.redd.it/6j75regs72e61          6   \n",
-      "1      l6uibd                    https://v.redd.it/ah50lyny62e61         23   \n",
-      "2      l6uhhn  https://www.reddit.com/r/wallstreetbets/commen...         47   \n",
-      "3      l6ugk6  https://sec.report/Document/0001193125-21-019848/         74   \n",
-      "4      l6ufgy                https://i.redd.it/4h2sukb662e61.jpg        156   \n",
-      "...       ...                                                ...        ...   \n",
-      "53182  owd2pn  https://www.reddit.com/r/wallstreetbets/commen...         87   \n",
-      "53183  owd1a5  https://www.reddit.com/r/wallstreetbets/commen...       1070   \n",
-      "53184  owc5dr                    https://v.redd.it/46jxu074exe71        372   \n",
-      "53185  owbfjf  https://www.reddit.com/r/wallstreetbets/commen...      11688   \n",
-      "53186  owaqd6  https://www.reddit.com/r/wallstreetbets/commen...        810   \n",
-      "\n",
-      "            created                                               body  \\\n",
-      "0      1.611863e+09                                                NaN   \n",
-      "1      1.611862e+09                                                NaN   \n",
-      "2      1.611862e+09  The CEO of NASDAQ pushed to halt trading “to g...   \n",
-      "3      1.611862e+09                                                NaN   \n",
-      "4      1.611862e+09                                                NaN   \n",
-      "...             ...                                                ...   \n",
-      "53182  1.627906e+09  ***TLDR: Three bitter scientists partnered up ...   \n",
-      "53183  1.627906e+09  \\nYour daily hype thread. Please keep the shit...   \n",
-      "53184  1.627902e+09                                                NaN   \n",
-      "53185  1.627898e+09  Your daily trading discussion thread. Please k...   \n",
-      "53186  1.627895e+09  This is an old Yacht Club thread. Click /u/Vis...   \n",
-      "\n",
-      "                 timestamp  index    neg    neu    pos  compound     label  \n",
-      "0      2021-01-28 21:37:41      0  0.000  1.000  0.000    0.0000   Neutral  \n",
-      "1      2021-01-28 21:32:10      1  0.305  0.695  0.000   -0.7034  Negative  \n",
-      "2      2021-01-28 21:30:35      2  0.000  1.000  0.000    0.0000   Neutral  \n",
-      "3      2021-01-28 21:28:57      3  0.231  0.625  0.144   -0.3397  Negative  \n",
-      "4      2021-01-28 21:26:56      4  0.000  0.881  0.119    0.2235  Positive  \n",
-      "...                    ...    ...    ...    ...    ...       ...       ...  \n",
-      "53182  2021-08-02 15:03:27  53182  0.321  0.679  0.000   -0.4278  Negative  \n",
-      "53183  2021-08-02 15:01:03  53183  0.000  0.823  0.177    0.4215  Positive  \n",
-      "53184  2021-08-02 13:59:35  53184  0.286  0.714  0.000   -0.3400  Negative  \n",
-      "53185  2021-08-02 13:00:16  53185  0.000  1.000  0.000    0.0000   Neutral  \n",
-      "53186  2021-08-02 12:00:14  53186  0.000  1.000  0.000    0.0000   Neutral  \n",
-      "\n",
-      "[53187 rows x 15 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file = pd.read_csv('dataset/text_and_label.csv')\n",
-    "print(file)"
+    "file = pd.read_csv('dataset/text_and_label.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "9df08b7a-c7ec-4fcb-914d-c7778b9e31fa",
    "metadata": {},
    "outputs": [],
@@ -94,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "20bdbe19-f5c8-4d5f-8d2c-22245248d03b",
    "metadata": {},
    "outputs": [
@@ -102,12 +41,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[({'title': \"It's not about the money, it's about sending a message. 🚀💎🙌\"}, 'Neutral')\n",
-      " ({'title': 'Math Professor Scott Steiner says the numbers spell DISASTER for Gamestop shorts'}, 'Negative')\n",
-      " ({'title': 'Exit the system'}, 'Neutral') ...\n",
-      " ({'title': 'Daily Popular Tickers Thread for August 02, 2021 - BABA | GME | AMD'}, 'Positive')\n",
-      " ({'title': 'Hitler reacts to the market being irrational'}, 'Negative')\n",
-      " ({'title': 'Fraternal Association of Gambling Gentlemen and Yacht Degenerates for August 02, 2021'}, 'Neutral')]\n"
+      "[({0: \"It's\", 1: 'not', 2: 'about', 3: 'the', 4: 'money,', 5: \"it's\", 6: 'about', 7: 'sending', 8: 'a', 9: 'message.', 10: '🚀💎🙌'}, 'Neutral')\n",
+      " ({0: 'Math', 1: 'Professor', 2: 'Scott', 3: 'Steiner', 4: 'says', 5: 'the', 6: 'numbers', 7: 'spell', 8: 'DISASTER', 9: 'for', 10: 'Gamestop', 11: 'shorts'}, 'Negative')\n",
+      " ({0: 'Exit', 1: 'the', 2: 'system'}, 'Neutral') ...\n",
+      " ({0: 'Ten', 1: 'Year', 2: 'Price', 3: 'Prediction', 4: 'for', 5: 'TSLA'}, 'Neutral')\n",
+      " ({0: 'Daily', 1: 'Discussion', 2: 'Thread', 3: 'for', 4: 'August', 5: '02,', 6: '2021'}, 'Neutral')\n",
+      " ({0: 'Fraternal', 1: 'Association', 2: 'of', 3: 'Gambling', 4: 'Gentlemen', 5: 'and', 6: 'Yacht', 7: 'Degenerates', 8: 'for', 9: 'August', 10: '02,', 11: '2021'}, 'Neutral')]\n"
      ]
     }
    ],
@@ -117,52 +56,118 @@
     "msk = np.random.rand(len(data_and_labels)) < 0.8\n",
     "train = data_and_labels[msk].to_records(index=False)\n",
     "for i in range(0,len(train)):\n",
-    "    train[i] = (dict(title=train[i][0]), train[i][1])\n",
+    "    data = {}\n",
+    "    title = train[i][0].split()\n",
+    "    for j in range(0,len(title)):\n",
+    "        data[j] = title[j]\n",
+    "    train[i] = (data, train[i][1])\n",
     "test = data_and_labels[~msk].to_records(index=False)\n",
     "for i in range(0,len(test)):\n",
-    "    test[i] = (dict(title=test[i][0]), test[i][1])\n",
+    "    data = {}\n",
+    "    title = test[i][0].split()\n",
+    "    for j in range(0,len(title)):\n",
+    "        data[j] = title[j]\n",
+    "    test[i] = (data, test[i][1])\n",
     "print(train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "b936d3fc-aede-43eb-aafb-978a86bf62cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[preprocess::extract emojis]\n",
+      "[preprocess::extract titles and body]\n",
+      "[preprocess::complete]\n"
+     ]
+    }
+   ],
    "source": [
-    "train = [\n",
-    "     (dict(a=1,b=1,c=1), 'y'),\n",
-    "     (dict(a=1,b=1,c=1), 'x'),\n",
-    "     (dict(a=1,b=1,c=0), 'y'),\n",
-    "     (dict(a=0,b=1,c=1), 'x'),\n",
-    "     (dict(a=0,b=1,c=1), 'y'),\n",
-    "     (dict(a=0,b=0,c=1), 'y'),\n",
-    "     (dict(a=0,b=1,c=0), 'x'),\n",
-    "     (dict(a=0,b=0,c=0), 'x'),\n",
-    "     (dict(a=0,b=1,c=1), 'y'),\n",
-    "     (dict(a=None,b=1,c=0), 'x'),\n",
-    "     ]\n",
-    "test = [\n",
-    "     (dict(a=1,b=0,c=1)), # unseen\n",
-    "     (dict(a=1,b=0,c=0)), # unseen\n",
-    "     (dict(a=0,b=1,c=1)), # seen 3 times, labels=y,y,x\n",
-    "     (dict(a=0,b=1,c=0)), # seen 1 time, label=x\n",
-    "     ]"
+    "from ipynb.fs.full.preprocessing import *\n",
+    "dict_emojis, dict_titles, dict_body = preprocess('dataset/reddit_wsb.csv')\n",
+    "#print(dict_emojis, dict_titles, dict_body)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "baca0f8c-3ea2-4c10-b8ee-3ee42eb0d026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "def remove_stop_words(dict_sentences):\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    for i in dict_sentences.keys():\n",
+    "        filtered = []\n",
+    "        for word in dict_sentences[i]:\n",
+    "            if word not in stop_words:\n",
+    "                filtered.append(word)\n",
+    "        dict_sentences[i] = filtered\n",
+    "    return dict_sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a43d3193-845b-4774-aa15-d8ec9893f697",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_titles = remove_stop_words(dict_titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eba6cd76-489b-4dc5-80f2-7e61741a868b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = []\n",
+    "for i in filtered_titles.keys():\n",
+    "    sentence = filtered_titles[i]\n",
+    "    dict_sentence = {}\n",
+    "    for j in range(0,len(sentence)):\n",
+    "        dict_sentence[j] = sentence[j]\n",
+    "    dataset.append( (dict_sentence, data_and_labels['label'][i] ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ed8ff417-43c9-4f9d-adc4-69b9fd74401c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24738\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = dataset[:int(len(dataset)*0.8)]\n",
+    "test = dataset[int(len(dataset)*0.8):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "600a47b4-36da-48df-aa2e-79e70fb1d543",
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier = nltk.classify.DecisionTreeClassifier.train(train[:-1], entropy_cutoff=0, support_cutoff=0)\n",
     "sorted(classifier.labels())\n",
-    "print(classifier)\n",
-    "\n",
-    "classifier.classify_many(test)"
+    "print(classifier)"
    ]
   },
   {
