--- a/WordProcessing.ipynb
+++ b/WordProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -13,24 +13,21 @@
     "import scipy \n",
     "import regex \n",
     "import emoji \n",
-    "import re\n"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#f_in = \"dataset/reddit_wsb.csv\"\n",
-    "#from ipynb.fs.full.WordProcessing import get_words"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -42,6 +39,9 @@
     "    normd = [ww.lower() for ww in tmp_list]\n",
     "    return normd\n",
     "\n",
+    "def make_lower(word):\n",
+    "    return word.lower()\n",
+    "\n",
     "def remove_links(post):\n",
     "    url_pattern = re.compile(r'https?//\\S+|www\\.\\S+')\n",
     "    return url_pattern.sub(r'', post)\n",
@@ -50,20 +50,33 @@
     "    other_chars = ['*', '[', ']', '; ',\":\",\"“\",\"“\",\"”\",\"-\",\"=\",\"|\",\"^\"] \n",
     "    for char in other_chars:\n",
     "        post = post.replace(char, '')\n",
-    "    return post"
+    "    return post\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_processed_data(data):\n",
+    "def train_test_split(df, frac=0.2):\n",
+    "    \n",
+    "    # get random sample \n",
+    "    test = df.sample(frac=frac, axis=0)\n",
+    "\n",
+    "    # get everything but the test sample\n",
+    "    train = df.drop(index=test.index)\n",
+    "\n",
+    "    return train, test\n",
+    "\n",
+    "def get_processed_data(data, as_list=False, split=0.1):\n",
     "    data.dropna(subset=['body'], inplace=True)\n",
     "    data=data.reset_index()\n",
+    "     \n",
+    "        \n",
     "    \n",
     "    # remove bad characters\n",
     "    data[\"body\"]=data[\"body\"].apply(remove_bad_chars)\n",
@@ -73,42 +86,62 @@
     "    data[\"body\"]=data[\"body\"].apply(remove_links)\n",
     "    data[\"title\"]=data[\"title\"].apply(remove_links)\n",
     "    \n",
+    "    data[\"body\"]=data[\"body\"].apply(make_lower)\n",
+    "    data[\"title\"]=data[\"title\"].apply(make_lower)\n",
+    "    \n",
     "    # put posts into list of words\n",
-    "    data[\"body\"]=data[\"body\"].apply(get_words)\n",
-    "    data[\"title\"]=data[\"title\"].apply(get_words)\n",
-    "    return data\n",
+    "    if as_list:\n",
+    "        print(\"Converting string to list of strings\")\n",
+    "        data[\"body\"]=data[\"body\"].apply(get_words)\n",
+    "        data[\"title\"]=data[\"title\"].apply(get_words)\n",
+    "    else:\n",
+    "        data[\"body\"]=data[\"body\"].apply(make_lower)\n",
+    "        data[\"title\"]=data[\"title\"].apply(make_lower)\n",
+    "       \n",
+    "    data_train, data_test = train_test_split(data,frac=split)\n",
+    "    \n",
+    "    return data_train, data_test\n",
     "\n",
     "def convert_to_dict(data,col):\n",
     "    my_dict = {}\n",
     "    for index, row in data.iterrows():\n",
     "        my_dict[index] = row[col]\n",
-    "    return my_dict\n",
-    "\n",
-    "\n"
+    "    return my_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#data = pd.read_csv(f_in)\n",
-    "#processed=get_processed_data(data)\n",
-    "#my_dict = convert_to_dict(processed,\"title\")\n",
-    "#print(my_dict[358])"
+    "f_in = \"dataset/text_and_label.csv\"\n",
+    "data = pd.read_csv(f_in)\n",
+    "processed_train, processed_test =get_processed_data(data)\n",
+    "my_dict_train = convert_to_dict(processed_train,\"title\")\n",
+    "my_dict_test = convert_to_dict(processed_test,\"title\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buy nok we are in power\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_dict_train[358])"
+   ]
   },
   {
    "cell_type": "code",
