--- a/portfolio_construction_clary.ipynb
+++ b/portfolio_construction_clary.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -124,6 +124,16 @@
       "\n",
       "[140 rows x 28 columns]>\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/openpyxl/worksheet/_reader.py:312: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  warn(msg)\n",
+      "/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py:3519: RuntimeWarning: '<' not supported between instances of 'float' and 'Timestamp', sort order is undefined for incomparable objects\n",
+      "  join_index = self.union(other)\n"
+     ]
     }
    ],
    "source": [
@@ -184,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -367,10 +377,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13dcf87b8>]"
+       "[<matplotlib.lines.Line2D at 0x10f0c4978>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
