--- a/clary_stock_analysis.ipynb
+++ b/clary_stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -27,78 +27,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method NDFrame.head of                            PLTR         RKT         ONE         AMC  \\\n",
-      "2021-01-28 00:00:00   0.0981285   0.0730753   0.0207792    0.279633   \n",
-      "2021-01-29 00:00:00   0.0390604    0.120988 -0.00537634   0.0733753   \n",
-      "2021-02-01 00:00:00   0.0387773  0.00416081  0.00269542    0.217647   \n",
-      "2021-02-02 00:00:00   0.0903225   0.0407696   0.0106101    0.175105   \n",
-      "2021-02-03 00:00:00   0.0194504   0.0180556   0.0134408  -0.0135593   \n",
-      "...                         ...         ...         ...         ...   \n",
-      "2021-08-11 00:00:00   0.0312093 -0.00341888  -0.0266586  0.00094999   \n",
-      "2021-08-12 00:00:00  -0.0179959  0.00228446   0.0800056  -0.0698803   \n",
-      "2021-08-13 00:00:00  0.00400002  -0.0553425   0.0356803   -0.039441   \n",
-      "NaN                         NaN         NaN         NaN         NaN   \n",
-      "Date                        NaN         NaN         NaN         NaN   \n",
-      "\n",
-      "                           REAL       SPCE          AMD          DD  \\\n",
-      "2021-01-28 00:00:00  -0.0755365  0.0731025    0.0257153  -0.0368099   \n",
-      "2021-01-29 00:00:00   0.0550678  0.0265934    0.0219278   0.0132886   \n",
-      "2021-02-01 00:00:00 -0.00627351  -0.140344  -0.00955893   0.0146841   \n",
-      "2021-02-02 00:00:00   0.0187372   0.170848  -0.00418129  -0.0333873   \n",
-      "2021-02-03 00:00:00 -0.00370219  -0.142857   0.00801353   0.0100396   \n",
-      "...                         ...        ...          ...         ...   \n",
-      "2021-08-11 00:00:00  -0.0658611  0.0834171 -0.000743511 -0.00993169   \n",
-      "2021-08-12 00:00:00   0.0161403  0.0317283   0.00828754  0.00166386   \n",
-      "2021-08-13 00:00:00   0.0389049  -0.005549   -0.0315387   0.0095091   \n",
-      "NaN                         NaN        NaN          NaN         NaN   \n",
-      "Date                        NaN        NaN          NaN         NaN   \n",
-      "\n",
-      "                            GME        TSLA  ...          AM        WISH  \\\n",
-      "2021-01-28 00:00:00    0.269434  -0.0188171  ...   0.0155503   0.0554449   \n",
-      "2021-01-29 00:00:00    0.144084   0.0439397  ...   0.0145985  -0.0404844   \n",
-      "2021-02-01 00:00:00    0.289234  -0.0313402  ...   0.0396158   0.0207221   \n",
-      "2021-02-02 00:00:00    0.360614  -0.0332789  ...    0.007722   0.0890625   \n",
-      "2021-02-03 00:00:00    0.174984   0.0254612  ...  -0.0424711  0.00821073   \n",
-      "...                         ...         ...  ...         ...         ...   \n",
-      "2021-08-11 00:00:00 -0.00220922  0.00686116  ... -0.00483612   0.0520733   \n",
-      "2021-08-12 00:00:00  -0.0154491  -0.0225245  ... -0.00430107   0.0561685   \n",
-      "2021-08-13 00:00:00   -0.012775  0.00903682  ...   0.0160771  -0.0847701   \n",
-      "NaN                         NaN         NaN  ...         NaN         NaN   \n",
-      "Date                        NaN         NaN  ...         NaN         NaN   \n",
-      "\n",
-      "                           UWMC          BY        MVIS        NIO  \\\n",
-      "2021-01-28 00:00:00   0.0187192 -0.00133687   0.0847029 -0.0283651   \n",
-      "2021-01-29 00:00:00   0.0050201  -0.0100566   0.0246913  0.0343893   \n",
-      "2021-02-01 00:00:00  0.00492603  -0.0292471 -0.00820793  0.0352124   \n",
-      "2021-02-02 00:00:00   0.0143129 -0.00357151  -0.0255376  0.0226078   \n",
-      "2021-02-03 00:00:00  -0.0392694  -0.0107591   -0.150311 -0.0360972   \n",
-      "...                         ...         ...         ...        ...   \n",
-      "2021-08-11 00:00:00   -0.013369  -0.0110672   0.0168612  0.0165511   \n",
-      "2021-08-12 00:00:00   0.0171504  0.00155396   0.0198544    0.04239   \n",
-      "2021-08-13 00:00:00  -0.0314961  0.00970874   0.0335387  0.0207638   \n",
-      "NaN                         NaN         NaN         NaN        NaN   \n",
-      "Date                        NaN         NaN         NaN        NaN   \n",
-      "\n",
-      "                             APP       SNDL        AAL          TD  \n",
-      "2021-01-28 00:00:00          NaN   0.138831    0.10969  -0.0105171  \n",
-      "2021-01-29 00:00:00          NaN  0.0204327  0.0813269   0.0115284  \n",
-      "2021-02-01 00:00:00          NaN      -0.21  0.0237681  0.00510109  \n",
-      "2021-02-02 00:00:00          NaN  0.0370371  0.0258368  -0.0124452  \n",
-      "2021-02-03 00:00:00          NaN -0.0254238 -0.0596026 -0.00397923  \n",
-      "...                          ...        ...        ...         ...  \n",
-      "2021-08-11 00:00:00  -0.00584594  0.0122399 -0.0290839  -0.0066909  \n",
-      "2021-08-12 00:00:00    0.0686723 -0.0197531  0.0285307  0.00216734  \n",
-      "2021-08-13 00:00:00 -0.000177118  0.0577889  0.0260187  0.00506144  \n",
-      "NaN                          NaN        NaN        NaN         NaN  \n",
-      "Date                         NaN        NaN        NaN         NaN  \n",
-      "\n",
-      "[140 rows x 25 columns]>\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -140,7 +68,7 @@
     "#get_cumulative_return_plot(daily_return_close2close)\n",
     "#get_cumulative_return_plot(daily_return_open2close)\n",
     "\n",
-    "print(daily_return_open2close.head)\n",
+    "#print(daily_return_open2close.head)\n",
     "\n",
     "daily_trend = daily_return_open2close#._get_numeric_data()\n",
     "#daily_trend[daily_trend < 0] = -1.0\n",
@@ -153,67 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method NDFrame.head of             Day    PLTR    RKT     ONE    AMC    REAL   SPCE      AMD     DD  \\\n",
-      "0    2021-01-28  1058.0    0.0  -704.0   -9.0   376.0    0.0      0.0    0.0   \n",
-      "1    2021-01-29  1129.0    0.0  3945.0  316.0 -4075.0 -111.0  12393.0 -849.0   \n",
-      "2    2021-01-30   710.0  269.0  1424.0  276.0 -1424.0 -246.0    707.0   55.0   \n",
-      "3    2021-01-31   657.0  815.0   626.0  170.0   317.0 -815.0     15.0  282.0   \n",
-      "4    2021-02-01   473.0  884.0  -149.0  -63.0   268.0 -884.0      0.0  159.0   \n",
-      "..          ...     ...    ...     ...    ...     ...    ...      ...    ...   \n",
-      "171  2021-08-12    58.0    0.0   -75.0    0.0     0.0   75.0    -75.0   36.0   \n",
-      "172  2021-08-13    31.0   45.0   -64.0    0.0     0.0   64.0    -64.0  -35.0   \n",
-      "173  2021-08-14     0.0    8.0   -37.0    0.0     0.0   37.0    -37.0  -37.0   \n",
-      "174  2021-08-15     0.0    0.0   -21.0   13.0     0.0   21.0    -21.0  -20.0   \n",
-      "175  2021-08-16     0.0    0.0   -11.0   11.0     0.0   11.0    -11.0    0.0   \n",
-      "\n",
-      "       GME  ...      AM  WISH  UWMC      BY  MVIS      NIO     APP    SNDL  \\\n",
-      "0   -246.0  ...  -673.0   0.0   0.0   364.0   0.0      0.0  -223.0   343.0   \n",
-      "1    196.0  ... -5816.0   0.0   0.0 -7501.0   0.0 -11088.0 -2913.0 -1372.0   \n",
-      "2    174.0  ...   377.0   0.0   0.0 -1020.0   0.0  -1424.0     0.0   -29.0   \n",
-      "3    126.0  ...    34.0   0.0   0.0  -939.0   0.0   -513.0     0.0     0.0   \n",
-      "4    148.0  ...   482.0   0.0   0.0  -724.0   0.0    -45.0     0.0     0.0   \n",
-      "..     ...  ...     ...   ...   ...     ...   ...      ...     ...     ...   \n",
-      "171   61.0  ...     0.0  75.0   0.0    75.0   0.0     75.0   -75.0    75.0   \n",
-      "172   64.0  ...     0.0  54.0  26.0    64.0   0.0     64.0   -64.0    64.0   \n",
-      "173   37.0  ...     0.0  37.0  37.0    37.0   0.0     37.0   -37.0    37.0   \n",
-      "174   21.0  ...     0.0  21.0  -1.0    21.0   0.0     21.0   -21.0    21.0   \n",
-      "175   11.0  ...     0.0  11.0   0.0    11.0   0.0     11.0   -11.0    11.0   \n",
-      "\n",
-      "       AAL      TD  \n",
-      "0   -263.0  -318.0  \n",
-      "1   -483.0 -2088.0  \n",
-      "2      0.0   206.0  \n",
-      "3      0.0    -3.0  \n",
-      "4      0.0  -794.0  \n",
-      "..     ...     ...  \n",
-      "171    0.0    75.0  \n",
-      "172    0.0    64.0  \n",
-      "173    0.0    37.0  \n",
-      "174    0.0    21.0  \n",
-      "175    0.0    11.0  \n",
-      "\n",
-      "[176 rows x 26 columns]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sent_by_ticker = pd.read_csv(\"./dataset/sentiment_by_ticker_sum.csv\")\n",
-    "print(sent_by_ticker.head)"
+    "#print(sent_by_ticker.head)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
