--- a/train.ipynb
+++ b/train.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[({0: \"It's\", 1: 'not', 2: 'about', 3: 'the', 4: 'money,', 5: \"it's\", 6: 'about', 7: 'sending', 8: 'a', 9: 'message.', 10: '🚀💎🙌'}, 'Neutral')\n",
+      "[({0: 'Math', 1: 'Professor', 2: 'Scott', 3: 'Steiner', 4: 'says', 5: 'the', 6: 'numbers', 7: 'spell', 8: 'DISASTER', 9: 'for', 10: 'Gamestop', 11: 'shorts'}, 'Negative')\n",
       " ({0: 'Exit', 1: 'the', 2: 'system'}, 'Neutral')\n",
       " ({0: 'NEW', 1: 'SEC', 2: 'FILING', 3: 'FOR', 4: 'GME!', 5: 'CAN', 6: 'SOMEONE', 7: 'LESS', 8: 'RETARDED', 9: 'THAN', 10: 'ME', 11: 'PLEASE', 12: 'INTERPRET?'}, 'Negative')\n",
       " ...\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "ed8ff417-43c9-4f9d-adc4-69b9fd74401c",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "600a47b4-36da-48df-aa2e-79e70fb1d543",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.412287793047696\n"
+      "0.9815397053539346\n",
+      "0.4009700889248181\n"
      ]
     }
    ],
@@ -174,6 +175,7 @@
     "classifier = nltk.classify.DecisionTreeClassifier.train(train, entropy_cutoff=0, support_cutoff=0)\n",
     "sorted(classifier.labels())\n",
     "#print(classifier)\n",
+    "print(nltk.classify.accuracy(classifier, train))\n",
     "print(nltk.classify.accuracy(classifier, test))"
    ]
   },
