--- a/NN_analysis_clary.ipynb
+++ b/NN_analysis_clary.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +179,7 @@
        "[3 rows x 25 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +436,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -634,7 +634,7 @@
        "[3 rows x 25 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -857,7 +857,7 @@
        "[3 rows x 25 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -967,18 +967,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sorted_sentiment_daily_sum = df_sent.groupby('Day')[\"PLTR_sentiment\"]#.value_counts()"
+    "sorted_sentiment_daily_sum = df_sent.groupby('Day')[\"GME_sentiment\"]#.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -987,22 +987,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PLTR_sentiment  Negative  Neutral  Positive\n",
-      "Day                                        \n",
-      "2020-09-29             0        1         0\n",
-      "2021-01-28             0       71      1058\n",
-      "2021-01-29          1723    11119      2852\n"
+      "GME_sentiment  Negative  Neutral  Positive\n",
+      "Day                                       \n",
+      "2020-09-29            0        1         0\n",
+      "2021-01-28          471      493       225\n",
+      "2021-01-29         3575     8348      3771\n"
      ]
     }
    ],
    "source": [
-    "gme_sent_freq = df_sent.groupby(['Day','PLTR_sentiment']).size().unstack(fill_value=0)\n",
+    "gme_sent_freq = df_sent.groupby(['Day','GME_sentiment']).size().unstack(fill_value=0)\n",
     "print(gme_sent_freq.head(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -1462,18 +1462,18 @@
       "2021-02-02 00:00:00      1.14    17.26  55.3471  \n",
       "\n",
       "[3 rows x 25 columns]\n",
-      "2021-01-29     42030900\n",
-      "2021-02-01     43460900\n",
-      "2021-02-02     69647900\n",
-      "2021-02-03     35312000\n",
-      "2021-02-04     31565000\n",
-      "                ...    \n",
-      "2021-08-09     35611100\n",
-      "2021-08-10     25947900\n",
-      "2021-08-11     34679000\n",
-      "2021-08-12    189287200\n",
-      "2021-08-13     52395100\n",
-      "Name: PLTR_vol, Length: 137, dtype: object\n",
+      "2021-01-29    50566100\n",
+      "2021-02-01    37382200\n",
+      "2021-02-02    78183100\n",
+      "2021-02-03    42698500\n",
+      "2021-02-04    62427300\n",
+      "                ...   \n",
+      "2021-08-09     2249200\n",
+      "2021-08-10     1623300\n",
+      "2021-08-11      945400\n",
+      "2021-08-12     1317800\n",
+      "2021-08-13     1014800\n",
+      "Name: GME_vol, Length: 137, dtype: object\n",
       "                PLTR       RKT       ONE       AMC      REAL      SPCE  \\\n",
       "2021-01-29 -0.013644  0.002341 -0.008021  0.349170 -0.058277  0.026643   \n",
       "2021-02-01 -0.035925  0.008357 -0.010811  0.003008  0.015794  0.176613   \n",
@@ -1549,20 +1549,20 @@
     "\n",
     "print(high.head(3))\n",
     "my_x_with_vol = pd.concat([daily_return, volume, high, low], axis=1, join='inner')\n",
-    "print(my_x_with_vol[\"PLTR_vol\"])\n",
+    "print(my_x_with_vol[\"GME_vol\"])\n",
     "print(my_x_with_vol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "my_sent = my_x_with_vol[[\"GME\",\"GME_vol\",\"GME_high\",\"GME_low\",\"positive\",\"neutral\",\"negative\"]]\n",
-    "my_sent.to_csv('GME_out.csv',index=False)"
+    "my_sent = my_x_with_vol[[\"PLTR\",\"PLTR_vol\",\"PLTR_high\",\"PLTR_low\",\"positive\",\"neutral\",\"negative\"]]\n",
+    "my_sent.to_csv('PLTR_out.csv',index=False)"
    ]
   },
   {
