--- a/train.ipynb
+++ b/train.ipynb
@@ -187,8 +187,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "71f956fa63643caec84358fa28ab297bee7c02e9f3910fc9c28c214c1a1c801d"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
